Remove invalid AllowEncodedSlashes directive from devstack apache template

--- a/devstack/apache-senlin.template
+++ b/devstack/apache-senlin.template
@@ -31,5 +31,11 @@ Alias /cluster %SENLIN_BIN_DIR%/senlin-wsgi-api
     WSGIProcessGroup senlin-api
     WSGIApplicationGroup %{GLOBAL}
     WSGIPassAuthorization On
-    AllowEncodedSlashes On
+    <IfVersion >= 2.4>
+        Require all granted
+    </IfVersion>
+    <IfVersion < 2.4>
+        Order allow,deny
+        Allow from all
+    </IfVersion>
 </Location>
